# franz

./: .envrc  .gitignore  .tool-versions  README.md  docker-compose.yml  mix.exs
config/: config.exs
lib/: franz.ex
lib/franz/: admin.ex  client.ex  config.ex  consumer.ex  message.ex  native.ex  producer.ex  utils.ex
lib/franz/admin/: config.ex
lib/franz/consumer/: config.ex
lib/franz/producer/: config.ex
native/franz/: Cargo.toml  README.md
native/franz/src/: admin.rs  atoms.rs  client.rs  config.rs  consumer.rs  lib.rs  message.rs  producer.rs  task.rs
src/: franz_native.erl
test/: franz_test.exs  test_helper.exs
test/franz/: consumer_test.exs
