[package]
name = "franz"
version = "0.1.0"
authors = ["Sonny Scroggin <sonny@scrogg.in>"]
edition = "2018"

[lib]
name = "franz"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
env_logger = "0.7"
futures = "0.3"
log = "0.4"
once_cell = "1.10.0"
rdkafka = { git = "https://github.com/fede1024/rust-rdkafka" }
rdkafka-sys = { git = "https://github.com/fede1024/rust-rdkafka" }
rustler = { git = "https://github.com/rusterlium/rustler" }
tokio = { version = "1", features = ["full"] }
